--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>Welcome to Ruth Chipompo 2021419185's Website</h1>
+    <h2>Group Partner Chipili Chipili 2021495787 </h2>
     <nav>
       <a href="#">Home</a> |
       <a href="#">About</a> |
